--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "uncorked",
   "version": "0.0.0",
   "dependencies": {
+    "bower": "^1.3.3",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-karma": "^0.8.3",
+    "grunt-tasks": "^0.1.3",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "load-grunt-tasks": "^0.4.0",
+    "yo": "^1.1.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
